fix: note metadata is overflowing

--- a/public/css/note.css
+++ b/public/css/note.css
@@ -13,6 +13,7 @@
 
 .meta-data .details {
 	display: flex;
+	align-items: start;
 	justify-content: space-between;
 	flex-wrap: wrap;
 	gap: 1em;
@@ -24,7 +25,7 @@
 	align-items: center;
 }
 
-.meta-data .author {
+.meta-data .author-display {
 	font-weight: 600;
 }
 
@@ -64,4 +65,15 @@
 hr.meta-content-separator {
 	margin: 2em 0;
 	border-bottom: 1px solid var(--border);
+}
+
+@media only screen and (max-width: 750px) {
+	.meta-data .author-date {
+		flex-direction: column;
+		align-items: start;
+	}
+
+	.meta-data .author-date > :not(:first-child)::before {
+		content: "";
+	}
 }
